Fixed padding when there's no breadcrumbs Fixed redundant call to breadcrumbs Removed unnecessary withRouter call Fixed license Removed styles of last breadcrumb, since it's not really the last one (not current page) Fixed "squished" title in editor when text scrolls

--- a/plugins/knowledge/src/scss/components/_breadcrumbs.scss
+++ b/plugins/knowledge/src/scss/components/_breadcrumbs.scss
@@ -48,16 +48,6 @@ $breadcrumbs-activeLink_opacity: 1;
     display: inline-flex;
     line-height: $global-condensed_lineHeight;
     color: inherit;
-
-    &.isCurrent {
-        opacity: .5;
-
-        @include allLinkStates {
-            cursor: pointer;
-            pointer-events: none;
-            color: inherit;
-        }
-    }
 }
 
 a.breadcrumb-link { // The location chooser component uses spans and we don't want to underline them
